[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/screen/online_lobby.gd" type="Script" id=1]
[ext_resource path="res://graphics/bg/grid_back.png" type="Texture" id=2]
[ext_resource path="res://graphics/bg/grid_gradient.png" type="Texture" id=3]
[ext_resource path="res://graphics/ui/transition.png" type="Texture" id=4]
[ext_resource path="res://scenes/ui/menu/scroll_label.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/font/pixel_intv.tres" type="DynamicFont" id=6]
[ext_resource path="res://scripts/ui/lobby/banner/manager/ready.gd" type="Script" id=7]
[ext_resource path="res://scenes/ui/lobby/banner/ready.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/ui/lobby/banner/manager/player.gd" type="Script" id=9]
[ext_resource path="res://scenes/ui/lobby/banner/player.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/ui/lobby/banner/chat.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/ui/menu/popup/yesno.tscn" type="PackedScene" id=12]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment() {
	vec4 tex = texture(TEXTURE, UV);
	tex.a = 1.0 - UV.x;
	COLOR = tex;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

void fragment() {
	vec4 tex = texture(TEXTURE, UV);
	tex.a = UV.x;
	COLOR = tex;
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[sub_resource type="Animation" id=5]
resource_name = "start"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("bg_back:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.02, 0.03, 0.04, 0.05, 0.07, 0.09, 0.11, 0.13, 0.15, 0.18, 0.21, 0.25, 0.3, 0.37, 0.47, 1.1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 15, 16 ]
}

[node name="online_lobby" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
__meta__ = {
"_edit_lock_": true
}

[node name="bg_back" type="Sprite" parent="."]
z_index = -4000
texture = ExtResource( 2 )
hframes = 17
frame = 16
__meta__ = {
"_edit_lock_": true
}

[node name="bg_grid" type="Sprite" parent="."]
modulate = Color( 1, 0.678431, 0.223529, 1 )
material = SubResource( 2 )
position = Vector2( -88, 0 )
z_index = -4000
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="bg_grid2" type="Sprite" parent="."]
modulate = Color( 0.160784, 1, 0.329412, 1 )
material = SubResource( 4 )
position = Vector2( 88, 0 )
z_index = -4000
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="transition" type="Sprite" parent="."]
visible = false
z_index = 2000
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="labels" type="Node2D" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.501961 )

[node name="label_select" parent="labels" instance=ExtResource( 5 )]
margin_left = -128.0
margin_right = -46.0
text = "ONLINE LOBBY"
left_border = -221
right_border = 151

[node name="label_select2" parent="labels" instance=ExtResource( 5 )]
margin_left = -35.0
margin_right = 47.0
text = "ONLINE LOBBY"
left_border = -221
right_border = 151

[node name="label_select3" parent="labels" instance=ExtResource( 5 )]
margin_left = 58.0
margin_right = 140.0
text = "ONLINE LOBBY"
left_border = -221
right_border = 151

[node name="label_select4" parent="labels" instance=ExtResource( 5 )]
margin_left = -221.0
margin_right = -139.0
text = "ONLINE LOBBY"
left_border = -221
right_border = 151

[node name="label_select5" parent="labels" instance=ExtResource( 5 )]
margin_left = -128.0
margin_top = 63.0
margin_right = -46.0
margin_bottom = 77.0
text = "ONLINE LOBBY"
move = Vector2( -1, 0 )
left_border = -221
right_border = 151

[node name="label_select6" parent="labels" instance=ExtResource( 5 )]
margin_left = -35.0
margin_top = 63.0
margin_right = 47.0
margin_bottom = 77.0
text = "ONLINE LOBBY"
move = Vector2( -1, 0 )
left_border = -221
right_border = 151

[node name="label_select7" parent="labels" instance=ExtResource( 5 )]
margin_left = 58.0
margin_top = 63.0
margin_right = 140.0
margin_bottom = 77.0
text = "ONLINE LOBBY"
move = Vector2( -1, 0 )
left_border = -221
right_border = 151

[node name="label_select8" parent="labels" instance=ExtResource( 5 )]
margin_left = -221.0
margin_top = 63.0
margin_right = -139.0
margin_bottom = 77.0
text = "ONLINE LOBBY"
move = Vector2( -1, 0 )
left_border = -221
right_border = 151

[node name="online_labels" type="Node2D" parent="."]
visible = false

[node name="label_name_player1" type="Label" parent="online_labels"]
margin_left = -120.0
margin_top = 53.0
margin_right = -34.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 1, 0.25098, 0.25098, 1 )
custom_constants/line_spacing = -3
text = "[lobby owner]"

[node name="label_name_player2" type="Label" parent="online_labels"]
margin_top = 53.0
margin_right = 120.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0.25098, 0.25098, 1, 1 )
custom_constants/line_spacing = -3
text = "Invite P2!"
align = 2

[node name="ready_banners" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="lobby_ready_banner_player1" parent="ready_banners" instance=ExtResource( 8 )]
position = Vector2( -160, -64 )

[node name="lobby_ready_banner_player2" parent="ready_banners" instance=ExtResource( 8 )]
position = Vector2( -160, -48 )

[node name="player_banners" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="lobby_player_banner_player1" parent="player_banners" instance=ExtResource( 10 )]
position = Vector2( 0, -64 )

[node name="lobby_player_banner_player2" parent="player_banners" instance=ExtResource( 10 )]
position = Vector2( 0, -48 )

[node name="lobby_player_banner_player3" parent="player_banners" instance=ExtResource( 10 )]
position = Vector2( 0, -32 )

[node name="lobby_player_banner_player4" parent="player_banners" instance=ExtResource( 10 )]
position = Vector2( 0, -16 )

[node name="lobby_player_banner_player5" parent="player_banners" instance=ExtResource( 10 )]

[node name="lobby_player_banner_player6" parent="player_banners" instance=ExtResource( 10 )]
position = Vector2( 0, 16 )

[node name="lobby_player_banner_player7" parent="player_banners" instance=ExtResource( 10 )]
position = Vector2( 0, 32 )

[node name="lobby_player_banner_player8" parent="player_banners" instance=ExtResource( 10 )]
position = Vector2( 0, 48 )

[node name="lobby_chat_banner" parent="." instance=ExtResource( 11 )]
position = Vector2( -128, -32 )
z_index = 1

[node name="label_name" type="Label" parent="."]
margin_left = -126.0
margin_top = -76.0
margin_right = 127.0
margin_bottom = -62.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "lobby name"
align = 2
clip_text = true

[node name="label_info" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.752941 )
margin_left = -128.0
margin_top = 63.0
margin_right = 129.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 6 )
text = "Atk/Slct: READY Dash: SKIP Start: CHAT"
align = 1
clip_text = true

[node name="label_timeout" type="Label" parent="."]
margin_left = -126.0
margin_top = 62.0
margin_right = 109.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = -3
text = "Waiting for spectators...15"
clip_text = true

[node name="label_player1_ready" type="Label" parent="."]
margin_left = -32.0
margin_top = -63.0
margin_right = -15.0
margin_bottom = -50.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = -3
text = "30"
align = 1
clip_text = true

[node name="label_player2_ready" type="Label" parent="."]
margin_left = -32.0
margin_top = -47.0
margin_right = -15.0
margin_bottom = -34.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = -3
text = "30"
align = 1
clip_text = true

[node name="timeout_timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="player1_ready_timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="player2_ready_timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="update_banner_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -5.0

[node name="menu_yesno" parent="." instance=ExtResource( 12 )]
z_index = 4000

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "start"
anims/start = SubResource( 5 )
[connection signal="timeout" from="timeout_timer" to="." method="_on_timeout_timer_timeout"]
[connection signal="timeout" from="player1_ready_timer" to="." method="_on_player1_ready_timer_timeout"]
[connection signal="timeout" from="player2_ready_timer" to="." method="_on_player2_ready_timer_timeout"]
[connection signal="timeout" from="update_banner_timer" to="." method="_on_update_banner_timer_timeout"]
